RTCEth/Import Declarations/Visual C++/RTC4ethimpl.h


extern "C" void __stdcall eth_set_com_timeouts_auto(double initial_timeout_ms, double sum_timeout_ms, double multiplicator, long mode);

extern "C" void __stdcall n_eth_get_com_timeouts_auto(unsigned short cardNo, double* initial_timeout_ms, double* sum_timeout_ms, double* multiplicator, long* mode);

extern "C" void __stdcall eth_get_com_timeouts_auto(double* initial_timeout_ms, double* sum_timeout_ms, double* multiplicator, long* mode);

extern "C" unsigned int __stdcall n_eth_watchdog_timer_config(unsigned short n, unsigned int timer_ms);

extern "C" unsigned int __stdcall eth_watchdog_timer_config(unsigned int timer_ms);

extern "C" unsigned int __stdcall n_eth_watchdog_timer_reset(unsigned short n);

extern "C" unsigned int __stdcall eth_watchdog_timer_reset();

extern "C" void __stdcall n_eth_link_loss_config(unsigned short n, unsigned int mode);

extern "C" void __stdcall eth_link_loss_config(unsigned int mode);

extern "C" unsigned int __stdcall n_eth_get_last_error(unsigned short n);

extern "C" unsigned int __stdcall eth_get_last_error();

extern "C" unsigned int __stdcall n_eth_get_error(unsigned short n);

extern "C" unsigned int __stdcall eth_get_error();

extern "C" unsigned int __stdcall n_eth_error_dump(unsigned short n, unsigned int * dump);

extern "C" unsigned int __stdcall eth_error_dump(unsigned int * dump);