RTCEth/Import Declarations/Visual Basic .NET/RTC4ethImport.vb

    Declare Sub      eth_set_com_timeouts_auto Lib "RTC4ethDLL.DLL" (ByVal initial_timeout_ms As Double, ByVal sum_timeout_ms As Double, ByVal multiplicator As Double, ByVal mode As Integer)
    Declare Sub      n_eth_get_com_timeouts_auto Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort, ByRef initial_timeout_ms As Double, ByRef sum_timeout_ms As Double, ByRef multiplicator As Double, ByRef mode As Integer)
    Declare Sub      eth_get_com_timeouts_auto Lib "RTC4ethDLL.DLL" (ByRef initial_timeout_ms As Double, ByRef sum_timeout_ms As Double, ByRef multiplicator As Double, ByRef mode As Integer)
    Declare Function n_eth_watchdog_timer_config Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal timer_ms As UInteger) As UInteger
    Declare Function eth_watchdog_timer_config Lib "RTC4ethDLL.DLL" (ByVal timer_ms As UInteger) As UInteger
    Declare Function n_eth_watchdog_timer_reset Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UInteger
    Declare Function eth_watchdog_timer_reset Lib "RTC4ethDLL.DLL" () As UInteger
    Declare Sub      n_eth_link_loss_config Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mode As UInteger)
    Declare Sub      eth_link_loss_config Lib "RTC4ethDLL.DLL" (ByVal mode As UInteger)
    Declare Function n_eth_get_last_error Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UInteger
    Declare Function eth_get_last_error Lib "RTC4ethDLL.DLL" () As UInteger
    Declare Function n_eth_get_error Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UInteger
    Declare Function eth_get_error Lib "RTC4ethDLL.DLL" () As UInteger
    Declare Function n_eth_error_dump Lib "RTC4ethDLL.DLL" (ByVal n As UShort, <MarshalAs(UnmanagedType.LPArray)> dump As UInteger()) As UInteger
    Declare Function eth_error_dump Lib "RTC4ethDLL.DLL" (<MarshalAs(UnmanagedType.LPArray)> dump As UInteger()) As UInteger
End Module
